MarcosSanchezSpring/src/main/java/com/example/marcossanchezspring/domain/validators/UserValidator.java
package com.example.marcossanchezspring.domain.validators;

import org.springframework.stereotype.Component;

@Component
public class UserValidator {
}
