MarcosSanchezSpring/src/main/java/com/example/marcossanchezspring/domain/errors/ErrorAppDatos.java
package com.example.marcossanchezspring.domain.errors;

public enum ErrorAppDatos implements ErrorApp {
    TIMEOUT,
    NO_CONNECTION,
}
